<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.runa.filedownloadtest.MainActivity">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvInfo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        tools:text="@string/selectTask"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="@string/pauseTask"
        android:layout_above="@+id/btnFinish"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="@string/finishTask"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

    <TextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


</RelativeLayout>
