<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.runa.filedownloadtest.MainActivity">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectTask"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        tools:text="@string/selectTask"
        android:textAppearance="@style/TextAppearance.AppCompat" />


    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20px"
        android:layout_below="@+id/tvSelectTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etSearch"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space"
        android:ems="10"
        android:hint="@string/searchOrCreate"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_toStartOf="@+id/btnNew"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/lvTasks"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etSearch"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:padding="16dp"
        android:text="@string/newTask"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/lvTasks"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
